# DealFinderSA

./: .env.example  .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml
config/: default.yaml
docs/: BUILD_STATE.md  deploy.md
docs/plans/: 2026-06-02-plan-1-walking-skeleton.md  2026-06-04-plan-2-dedup-clustering.md  2026-06-08-plan-3-deal-scoring.md  2026-06-11-plan-10-mileage-aware-scoring.md  2026-06-11-plan-8-detail-field-extraction.md  2026-06-11-plan-9-distance-filter.md
docs/specs/: 2026-06-02-dealfindersa-design.md
migrations/: 001_core.sql  002_clustering.sql  003_scoring.sql  004_alerts.sql
scripts/: register_scheduled_task.ps1  run_scrape.sh
src/dealfinder/: __init__.py  alerts.py  cli.py  config.py  db.py  email.py  fetch.py  fingerprint.py  geo.py  models.py  phone.py  pipeline.py  scoring.py  validity.py  vehicles.py  web.py
src/dealfinder/adapters/: __init__.py  base.py  gumtree.py  webuycars.py
tests/: conftest.py  test_alerts.py  test_cli.py  test_config.py  test_db.py  test_email.py  test_fetch.py  test_fingerprint.py  test_geo.py  test_gumtree.py  test_models.py  test_phone.py  test_pipeline.py  test_scoring.py  test_scoring_runner.py  test_smoke.py  test_validity.py  test_vehicles.py  test_web.py  test_webuycars.py
tests/fixtures/: gumtree_cars.html  gumtree_detail.html  webuycars_search.json
